[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Colors/Celebratory.png" type="Texture" id=1]
[ext_resource path="res://Themes/Fonts/times.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PassedFinal.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/Context Sensitive - 20XX - 06 Often.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="PassedFinal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 960, 584 )
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -593.0
margin_top = -223.5
margin_right = 593.0
margin_bottom = 223.5
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 90.0
margin_top = 12.0
margin_right = 1095.0
margin_bottom = 435.0
custom_constants/separation = 15

[node name="CelebratoryMessage" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1005.0
margin_bottom = 297.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "I can't believe you did it! You officially
destroyed Count Von Type's strongest
forces! You can leave and be free, or 
return to the vampire's den..."

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 1005.0
margin_bottom = 348.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 314.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "You destroyed a total of "

[node name="TotalWordLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 334.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.545098, 0.913725, 0.992157, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 559.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = " bats, impressive."

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 363.0
margin_right = 1005.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
